@@ -25,9 +25,9 @@ import com.clearspend.capital.data.model.enums.Currency;
 import com.clearspend.capital.data.model.enums.FundingType;
 import com.clearspend.capital.data.model.enums.LimitPeriod;
 import com.clearspend.capital.data.model.enums.LimitType;
-import com.clearspend.capital.data.model.enums.TransactionChannel;
+import com.clearspend.capital.data.model.enums.MccGroup;
+import com.clearspend.capital.data.model.enums.PaymentType;
 import com.clearspend.capital.data.model.enums.card.CardType;
-import com.clearspend.capital.service.MccGroupService;
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.github.javafaker.Faker;
 import java.math.BigDecimal;
@@ -53,7 +53,6 @@ public class CardControllerTest extends BaseCapitalTest {
 
   private final TestHelper testHelper;
   private final MockMvcHelper mockMvcHelper;
-  private final MccGroupService mccGroupService;
   private final EntityManager entityManager;
 
   private final Faker faker = new Faker();
@@ -111,8 +110,8 @@ public class CardControllerTest extends BaseCapitalTest {
                             BigDecimal.ONE,
                             LimitPeriod.MONTHLY,
                             BigDecimal.TEN)))),
-            Collections.emptyList(),
-            Set.of(TransactionChannel.MOTO));
+            Collections.emptySet(),
+            Set.of(PaymentType.MANUAL_ENTRY));
     issueCardRequest.setShippingAddress(testHelper.generateApiAddress());
 
     List<IssueCardResponse> issueCardResponse =
@@ -152,7 +151,7 @@ public class CardControllerTest extends BaseCapitalTest {
         .containsOnly(new CurrencyLimit(Currency.USD, new HashMap<>()));
 
     assertThat(cardDetailsResponse.getDisabledMccGroups()).isEmpty();
-    assertThat(cardDetailsResponse.getDisabledTransactionChannels()).isEmpty();
+    assertThat(cardDetailsResponse.getDisabledPaymentTypes()).isEmpty();
   }
 
   @Test
@@ -180,11 +179,8 @@ public class CardControllerTest extends BaseCapitalTest {
                     LimitType.PURCHASE,
                     Map.of(
                         LimitPeriod.DAILY, BigDecimal.ONE, LimitPeriod.MONTHLY, BigDecimal.TEN)))));
-    updateCardRequest.setDisabledMccGroups(
-        Collections.singletonList(
-            mccGroupService.retrieveMccGroups(business.getId()).get(0).getId()));
-    updateCardRequest.setDisabledTransactionChannels(
-        Set.of(TransactionChannel.MOTO, TransactionChannel.ONLINE));
+    updateCardRequest.setDisabledMccGroups(Set.of(MccGroup.CHILD_CARE));
+    updateCardRequest.setDisabledPaymentTypes(Set.of(PaymentType.MANUAL_ENTRY, PaymentType.ONLINE));
 
     CardDetailsResponse cardDetailsResponse =
         mockMvcHelper.queryObject(
@@ -199,8 +195,8 @@ public class CardControllerTest extends BaseCapitalTest {
         .containsExactlyInAnyOrderElementsOf(updateCardRequest.getLimits());
     assertThat(cardDetailsResponse.getDisabledMccGroups())
         .containsExactlyInAnyOrderElementsOf((updateCardRequest.getDisabledMccGroups()));
-    assertThat(cardDetailsResponse.getDisabledTransactionChannels())
-        .containsExactlyInAnyOrderElementsOf((updateCardRequest.getDisabledTransactionChannels()));
+    assertThat(cardDetailsResponse.getDisabledPaymentTypes())
+        .containsExactlyInAnyOrderElementsOf((updateCardRequest.getDisabledPaymentTypes()));
   }
 
   @SneakyThrows
@@ -232,8 +228,8 @@ public class CardControllerTest extends BaseCapitalTest {
             Currency.USD,
             true,
             CurrencyLimit.ofMap(Map.of(Currency.USD, Map.of())),
-            Collections.emptyList(),
-            Set.of(TransactionChannel.MOTO));
+            Collections.emptySet(),
+            Set.of(PaymentType.ONLINE));
     issueCardRequest.setShippingAddress(testHelper.generateApiAddress());
 
     for (int i = businessLimit.getIssuedPhysicalCardsTotal();
